@@ -9,6 +9,9 @@ BUGFIXES:
   ZOOKEEPER-790. Last processed zxid set prematurely while establishing 
   leadership (flavio via mahadev)
 
+  ZOOKEEPER-772. zkpython segfaults when watcher from async get children 
+  is invoked. (henry robinson via mahadev)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-789. Improve FLE log messages (flavio via phunt)
